--- a/SoundSystemSolutionTest/MainWindow.axaml
+++ b/SoundSystemSolutionTest/MainWindow.axaml
@@ -92,6 +92,7 @@
             <TextBox Width="215" x:Name="UsernameTextBox"
                      Watermark="Enter your username"
                      HorizontalAlignment="Left"
+                     TabIndex="1"
                      Grid.Row="1"
                      Margin="15,6,0,0"/>
 
@@ -105,8 +106,10 @@
             <TextBox Width="215" x:Name="PasswordTextBox"
                      PasswordChar="*" Watermark="Enter your password"
                      HorizontalAlignment="Left"
+                     TabIndex="2"
                      Grid.Row="3"
-                     Margin="15,6,0,0"/>
+                     Margin="15,6,0,0"
+                     KeyDown="PasswordTextBox_OnKeyDown"/>
             
             <TextBlock Text="" x:Name="StatusLabel"
                        FontSize="11"
@@ -123,7 +126,7 @@
                     Background="LightBlue"
                     Margin="14 5"
                     Click="LoginButton_OnClick"
-            >
+                    >
                 Login
             </Button>
             
