--- a/SoundSystemSolutionTest/Dashboard.axaml
+++ b/SoundSystemSolutionTest/Dashboard.axaml
@@ -3,7 +3,32 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
+        Width="800" Height="400"
+        RequestedThemeVariant="Light"
         x:Class="SoundSystemSolutionTest.Dashboard"
         Title="Dashboard">
-    Welcome to Avalonia!
+
+        <Window.Styles>
+
+                <!-- Button Style -->
+                <Style Selector="Button">
+                        <Setter Property="HorizontalContentAlignment" Value="Center"/>
+                        <Setter Property="VerticalContentAlignment" Value="Center"/>
+                        <Setter Property="HorizontalAlignment" Value="Center"/>
+                        <Setter Property="HorizontalAlignment" Value="Center"/>
+                        <Setter Property="CornerRadius" Value="20"/>
+                        <Setter Property="FontSize" Value="20"/>
+                        <Setter Property="Height" Value="50"/>
+                </Style>
+        </Window.Styles>
+
+        <Grid RowDefinitions="Auto, Auto, Auto" ColumnDefinitions="*, Auto, *">
+                <Grid ColumnDefinitions="*, Auto, Auto, Auto, *">
+                        <Button x:Name=""
+                        
+                        Grid.Column="1">
+                                
+                        </Button>
+                </Grid>  
+        </Grid>
 </Window>
